--- a/yew_node_graph_example/index.html
+++ b/yew_node_graph_example/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link data-trunk rel="scss" href="assets/common.scss"/>
         <link data-trunk rel="scss" href="assets/light.scss"/>
         <title>Yew App</title>
     </head>
