--- a/yew_node_graph_example/index.html
+++ b/yew_node_graph_example/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <link data-trunk rel="scss" href="assets/common.scss"/>
         <link data-trunk rel="scss" href="assets/light.scss"/>
+        <link data-trunk rel="scss" href="assets/example.scss"/>
         <title>Yew App</title>
     </head>
 </html>
